[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/efx/messagebox.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/next.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/SWAV_17.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/ui/puntero.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Overlock-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "next"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1700, 180 ), Vector2( 1700, 160 ) ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/Overlock-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = SubResource( 4 )

[node name="dialog" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -888.0
margin_top = -368.334
margin_right = 896.0
margin_bottom = -115.334
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.55103
margin_bottom = -7.55103
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0562
margin_top = 29.3701
margin_right = -95.9438
margin_bottom = -40.6299
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.329412, 0.309804, 0.309804, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="next" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -83.9999
margin_top = -92.991
margin_right = -43.9999
margin_bottom = -52.991
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="next"]
autoplay = "next"
anims/next = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -21.579
pitch_scale = 0.86
bus = "Reverb"

[node name="Label1" type="Label" parent="."]
visible = false
margin_left = 69.4823
margin_top = 136.979
margin_right = 183.482
margin_bottom = 188.979
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.329412, 0.309804, 0.309804, 1 )
text = "Tienda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 68.4088
margin_top = 50.1072
margin_right = 206.409
margin_bottom = 102.107
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.329412, 0.309804, 0.309804, 1 )
text = "Historia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 46.3603, 78.825 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
